--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_remote_for(tmpl, :method => method, :html => {:id => "print_template_form"}, :loading => "Status.loading()") do |f| %>
+<% form_remote_for(tmpl, :method => method, :html => {:id => "print_template_form"}, :loading => "Status.show()", :complete => "Status.hide()") do |f| %>
   <div class="header">
     <%= f.label :name, "Name:" %>
     <%= f.text_field :name %>
