--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :name %>
   </div>
 
-  <p><%= f.text_area :body %></p>
+  <p><%= f.text_area :body, :id => 'template-editor' %></p>
 
   <div class="button-panel">
     <p class="buttons">
