--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= stylesheet_link_tag 'application', 'jquery-ui-1.7.1.custom', :media => 'screen' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
 
-  <%= javascript_include_tag :defaults, 'jquery-ui-1.7.1.custom.min' %>
+  <%= javascript_include_tag :defaults, 'jquery-ui' %>
   
   <%= content_tag :script, "window.onload = function() { Messenger.notice(#{h(flash[:notice]).inspect}); }", :type => "text/javascript"  if flash[:notice]%>
   <%= content_tag :script, "window.onload = function() { Messenger.error(#{h(flash[:error]).inspect}); }", :type => "text/javascript"  if flash[:error]%>     
@@ -47,9 +47,6 @@
     
     <!-- begin div.main-->
     <div id="main">
-      <%= title_html %>
-      <%= nav_linklist_html %>
-      
       <%= @content_for_layout %>   
     </div>
     <!-- end div.main -->
