--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -1,6 +1,6 @@
 <iframe src='<%= url_for(:controller => 'orders', :action => 'preview', :id => order, :template_id => tmpl) %>' 
         onload="Callback.trigger('<%= tmpl.id %>')" 
-        name="iframe-preview" 
+        name="iframe-preview"
         id="iframePreview<%= tmpl.id %>" 
         scrolling='auto' 
         height='80%' 
@@ -19,9 +19,9 @@
     <p class="buttons">
       <%= button_to_function "Print this template", "var iframe = frames[frames.length-1]; iframe.focus(); iframe.print();"%>
       or
-      <%= button_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl}, :method => 'get', :loading => "Status.show();" %>
+      <%= button_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl}, :method => 'get', :loading => "Status.reset(); Status.show();" %>
       or
-      <%= link_to_function "Cancel", "Dialog.close()" %>
+      <%= link_to_function "Cancel", "Dialog.close();" %>
     </p>
   </div>
 <% end %>
