--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,5 @@
-<% title "Your orders", :description => "Select the order you want to print. You can choose different templates for various purposes."%>
+<h1>Your orders</h1>
+<p class="note">Select the order you want to print. You can choose different templates for various purposes.</p>
 
 <div id="modal-dialog"></div>
 
