--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -10,7 +10,11 @@
     <p class="buttons">
       <%= submit_tag(method.to_sym == :post ? "Create" : "Update" )%>
       or
-      <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>      
+      <% if method.to_sym == :post %>
+        <%= link_to_function "Cancel", "Dialog.close();", :class => 'action' %>
+      <% else %>
+        <%= link_to_function "Cancel", "Templates.preview(#{tmpl.id});", :class => 'action' %>      
+      <% end %>
     </p>
   </div>
 <% end %>
