--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -1,11 +1,10 @@
 <iframe src='<%= url_for(:controller => 'orders', :action => 'preview', :id => order, :template_id => tmpl) %>' 
         onload="Callback.trigger('<%= tmpl.id %>')" 
-        name="iframe-preview"
-        id="iframePreview<%= tmpl.id %>" 
-        scrolling='auto' 
-        height='80%' 
-        width='100%' 
-        frameborder='0'>
+        name="iframe-popup-preview" 
+        scrolling="auto" 
+        height="80%"
+        width="100%" 
+        frameborder="0">
 </iframe>
 
 
@@ -14,14 +13,12 @@
 <% end %>
 
 
-<% unless defined?(inline) %>
-  <div class="button-panel">
-    <p class="buttons">
-      <%= button_to_function "Print this template", "var iframe = frames[frames.length-1]; iframe.focus(); iframe.print();"%>
-      or
-      <%= button_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl}, :method => 'get', :loading => "Status.reset(); Status.show();" %>
-      or
-      <%= link_to_function "Cancel", "Dialog.close();" %>
-    </p>
-  </div>
-<% end %>
+<div class="button-panel">
+  <p class="buttons">
+    <%= button_to_function "Print this template", "var iframe = frames[frames.length-1]; iframe.focus(); iframe.print();"%>
+    or
+    <%= button_to_remote "Edit", :url => {:controller => 'print_templates', :action => 'edit', :id => tmpl}, :method => 'get', :loading => "Status.reset(); Status.show();" %>
+    or
+    <%= link_to_function "Cancel", "Status.hide(); Dialog.close();" %>
+  </p>
+</div>
