--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,44 +1,50 @@
-<div class="order">
-  <h2>Order <%= @order.name %></h2>
-  <%= link_to "Go back to original order", @order.url, :title => "Open order in Shopify admin interface", :class => 'action' %>
-</div>
+<div class="order-widget">
+  <div class="order">
+    <h2>Order <%= @order.name %></h2>
+    <p>
+      <span class="price"><%= money_with_currency(@order.total_price) %></span>
+      <span class="highlight"><%= @order.financial_status %></span>
+      by <span class="note"><%= @order.billing_address.name %></span>
+    </p>
+    <%= link_to "Go back to original order", @order.url, :title => "Open order in Shopify admin interface", :class => 'action' %>
+  </div>
+  
+  <div class="templates">
+    <% if @tmpls.blank? %>
+      <em class="note">No templates found, you should create a new one.</em>
+    <% else %>
 
+      <% form_tag({:action => 'print'}, :id => "selected-templates") do %>
+        <ul id="print-list">
+          <% @tmpls.each do |tmpl| %>
+            <%= render :partial => 'template_checkbox', :locals => {:tmpl => tmpl, :order => @order} %>
+          <% end %>
+        </ul>
+      <% end %>
+      <p id="add-template-link">
+        <%= image_tag "add.gif "%>
+        <%= link_to_remote "Add new template", :url => {:controller => 'print_templates', :action => 'new'}, 
+                                                  :loading => "Status.show()", :complete => "Status.hide()", :html => {:class => 'action'} %>
+      </p>
+    <% end %>
+  </div>
+
+  <div class="print-box">
+    <h3>Templates</h3>
+    <p id="print-start" class="note">
+      Select the templates you want to print for this order.
+    </p>
+
+    <div id="print-button" class="note">
+      <p><span id="template-amount">The following documents</span> will be printed.</p>
+      <%= button_to_function "Print", "Templates.print()" %>
+    </div>
+  </div>
+</div>
 
 <!-- This is populated later via AJAX and popped up with the dialog function of JQueryUI -->
 <div id="modal-dialog">
 </div>
-
-<% sidebar do %>
-
-  <% if @tmpls.blank? %>
-    <em class="note">No templates found, you should create a new one.</em>
-  <% else %>
-    <div class="print-box">
-      <h3>Templates</h3>
-      <p id="print-start" class="note">
-        Select the templates you want to print for this order.
-      </p>
-
-      <p id="print-button" class="note">
-        <span id="template-amount">The ollowing templates</span> will be printed.<br/>
-        <%= button_to_function "Print", "Templates.print()" %>
-      </p>
-    </div>
-    
-    <% form_tag({:action => 'print'}, :id => "selected-templates") do %>
-      <ul id="print-list">
-      <% @tmpls.each do |tmpl| %>
-        <%= render :partial => 'template_checkbox', :locals => {:tmpl => tmpl, :order => @order} %>
-      <% end %>
-      <li id="template-create-link">
-        <%= link_to_remote "Create new template", :url => {:controller => 'print_templates', :action => 'new'}, 
-                                                  :loading => "Status.show()", :complete => "Status.hide()", :html => {:class => 'action'} %>
-      </li>
-      </ul>
-    <% end %>
-  <% end %>
-  
-<% end %>
 
 
 <!-- Empty Containers in correct order, ready to be filled with AJAX previews -->
@@ -55,9 +61,7 @@
     Templates.updateSelection($(this));
   });
   
-
   // both live event handlers make sure the events also work for ajax inserted elements later on
-  
   $("#selected-templates :checkbox").live("change", function() {
     Templates.updateSelection($(this));
   });
