--- a/db/printing/invoice.liquid
+++ b/db/printing/invoice.liquid
@@ -37,7 +37,7 @@
 <h4>Your items will be shipped to:</h4>
 
 <div style="padding: 8px; border: 2px solid #ccc;">
-  {{ customer.name }}<br/>
+  {{ shipping_address.name }}<br/>
   {{ shipping_address.company }}<br/>
   {{ shipping_address.street }}<br/>
   {{ shipping_address.city }}<br/>
